frontend/src/components/CSS/Homepage.css
.Homepage {
  background: var(--background);
  /* background-image: var(--background-image); */
  background-color: var(--background);
  background-size: cover;
  display: flex;
  flex-direction: column;
}

.homepage-text {
  text-align: left;
  font-weight: bold;
  padding-top: 0%;
  padding-bottom: 0;
  margin-top: 0.5em !important;
  margin-bottom: 0.5rem !important;
  color: var(--title-text);
}

.container-fluid {
  padding-right: 3rem;
  padding-left: 3rem;
  margin-right: auto;
  margin-left: auto;
  height: 83vh;
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: stretch;
  gap: 1rem;
  margin-bottom: 1rem;
  border: 0.3rem solid var(--theme_blue);
}

.card-custom {
  position: relative;
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  flex: 1 0 calc(33.333% - 40px);
  min-height: 300px;
}

.card-img-top {
  width: 100%;
  height: 10rem;
  object-fit: cover;
  /* Ensure images cover the card area properly */
  object-position: center;
}

.card-body {
  max-height: 15vh;
  min-height: 15vh;
  background: var(--card-color);
  opacity: 0.9;
  padding: 1rem;
  overflow: visible;
}

.card-title {
  font-size: 20px;
  margin-bottom: 20px;
}

.card-actions {
  top: 10px;
  /* Adjust as necessary */
  right: 10px;
  /* This positions the container to the top-right corner of the card */
  display: flex;
  gap: 15px;
}

.card-action-btn {
  width: 50% !important;
  /* Ensure the button takes up the full width */
  background-color: var(--btn-color);
  color: var(--btn-text-color);
  /* Text color */
  border: none;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  /* Adjust the font size as needed */
  transition: background-color 0.3s ease;
  /* Smooth transition for hover effect */
}

.btn {
  height: 2rem !important;
  /* Adjust the height of the button */
  border-radius: 30px;
  /* Round the corners */
}

.card-action-btn:hover {
  background-color: var(--btn-color-hover);
  color: var(--btn-text-color);
}

.btn-container {
  display: none;
  /* Hide the original btn-container if not needed */
}

/* Slick Carousel Customizations */
.slick-slide {
  margin: 15px;
}

.slick-list {
  margin: 0 -15px;
}

.slick-track {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.slick-prev,
.slick-next {
  z-index: 1;
}

.slick-prev {
  left: -25px;
}

.slick-next {
  right: -25px;
}

.slick-prev:before,
.slick-next:before {
  color: black;
}

@media (max-width: 1024px) {
  .card-custom {
    flex: 1 0 calc(50% - 20px);
    /* Adjust so two cards fit within the space */
  }
  .card-body {
    padding: 0.8rem;
  }
}

@media (max-width: 600px) {
  .card-custom {
    flex: 1 0 calc(100% - 20px);
    /* Adjust so one card fits within the space */
  }
  .card-body {
    padding: 0.5rem;
  }
}

/* Import Slick Carousel styles */
@import "~slick-carousel/slick/slick.css";
@import "~slick-carousel/slick/slick-theme.css";

